platform/stalwart/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-service
spec:
  type: ClusterIP
  selector:
    app: stalwart
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 443
    - name: smtp
      port: 25
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
    - name: smtps
      port: 465
      targetPort: 465
    - name: imap
      port: 143
      targetPort: 143
    - name: imaps
      port: 993
      targetPort: 993
    - name: sieve
      port: 4190
      targetPort: 4190
